   [fschulze]

 * Removed compatibility stuff for Plone version lower than 3.0.
   [fschulze]

1.3.5 (SVN/unreleased)
======================

 * Fixed string protection for strings which mix single and double quotes.
   [fschulze]

 * Made packer.py usable as a standalone commandline tool.
   [fschulze]

 * Fixed several issues in 'full' compression.
   [fschulze]

1.3.4
=====

 * Improved IE conditional compilation protection, it now works in "full"
   compression.
   [fschulze]

 * Improved regular expression for strings.
   [fschulze]

 * Fixed order of oneline and multiline comment removal in javascript packer.
   [fschulze]

 * Fixed validation warning about multiple comments when rendering resources
   inline.
   [fschulze]

 * Made css "full" packing more aggressive.
   [fschulze]

 * Cleaned up testing framework and made all tests run properly.
   [fschulze, hannosch]

1.3.3
=====

 * Don't wrap None in aquisition wrapper if resource is not found.
   [tesdal]

1.3.2
=====

 * Made GenericSetup importer not fail on repeated imports.
   [alecm]

 * Made enabled checkbox work again.
   [fschulze]

1.3.1
=====

 * Enable use of z3 / Five resources.
   [ree]

 * Mark missing or unaccessible ressources in management screens.
   [fschulze]

 * Moved 'enabled' checkbox into legend before 'id' textbox.
   [fschulze]

 * Don't remove conditional compile instructions for IE from javascripts.
   [fschulze]

 * Fixed error when content is unicode.
   [rocky]

1.3
===

 * No changes since rc1.

1.3-rc1
=======

 * Add patch from jenner to handle updating and removal of resources
   from GenericSetup profiles.
   [wichert]

1.3-beta2
=========

 * Included fixes from the 1.2 line.
   [fschulze]

1.3-beta1
=========

 * Do not install default CSS and JS on upgrade, only on initial installation.
   [wichert]

1.3-alpha1
==========

 * Added GenericSetup import/export handlers (to support GS-based Plone 2.5 
   portal creation)
   [rafrombrc]

1.2.4
=====
